--- a/css/style2.css
+++ b/css/style2.css
@@ -76,8 +76,7 @@ nav a {
 /*Sobre mí__________________________________________________________________________________________________*/
 
 #sobremi {
-  background: url(img/fondofondo.jpg);
-  background-attachment: fixed;
+  background-image: url(img/fondo2.jpg);  
 }
 
 .padreflex {
